--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rebass/forms": "^4.0.6",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "rebass": "^4.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,7 +37,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-
   "prettier": {
     "trailingComma": "all",
     "tabWidth": 2,
