--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "format": "prettier --write \"src/**/*.{js,json,css}\"",
-    "ci": "npm lint && cross-env CI=true npm test --coverage"
+    "ci": "npm run lint && cross-env CI=true npm run test --coverage"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -37,9 +37,17 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "lint-staged": {
+    "src/**/*.js": [
+      "prettier --write",
+      "eslint --max-warnings=0",
+      "npm run test --bail --findRelatedTests",
+      "git add"
+    ]
+  },
   "prettier": {
     "trailingComma": "all",
-    "tabWidth": 2,
+    "tabWidth": 4,
     "semi": true,
     "singleQuote": true
   },
