--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@rebass/forms": "^4.0.6",
+    "@rebass/layout": "^4.0.6",
+    "apollo-boost": "^0.4.4",
     "bootstrap": "^4.3.1",
+    "graphql": "^14.5.8",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -72,7 +75,9 @@
     ]
   },
   "devDependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "cross-env": "^6.0.3",
+    "graphql-tag.macro": "^2.0.1",
     "husky": "^3.0.8",
     "jest": "^24.9.0",
     "lint-staged": "^10.0.0-0",
