--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
     "apollo-link-state": "^0.4.2",
+    "apollo-link-ws": "^1.0.19",
     "bootstrap": "^4.3.1",
     "emotion-theming": "^10.0.19",
     "graphql": "^14.5.8",
@@ -26,11 +27,13 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-svg-radar-chart": "^1.2.0",
     "rebass": "^4.0.6",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
     "start": "react-scripts start",
